@@ -1,5 +1,6 @@
-using Combinatorics, Serialization, IterTools, ProgressMeter, StatsBase, ProfileView, BenchmarkTools
-using DataStructures, Random, DataFrames, ThreadTools, Infiltrator, LinearAlgebra, TimerOutputs, JSON
+using Combinatorics, Serialization, IterTools, StatsBase, DataStructures, Random, DataFrames, ThreadTools, LinearAlgebra
+
+# using Infiltrator, TimerOutputs, JSON, ProgressMeter, ProfileView, BenchmarkTools
 
 
 # (@isdefined to) || (const to = TimerOutput())
@@ -8,24 +9,24 @@ struct Card
     rank::Int64;
     suit::Int64;    
 end
-Base.show(io::IO, c::Card) = print(io, shortname(c));
-showHand(H) = display(permutedims(H));
-Base.isless(x::Card, y::Card) = (x.suit > y.suit) ? true : (x.rank < y.rank);   ## Bridge bidding suit order, ace == 1
+Base.show(io::IO, c::Card) = print(io, shortname(c))
+showHand(H) = display(permutedims(H))
+Base.isless(x::Card, y::Card) = (x.suit > y.suit) ? true : (x.rank < y.rank)   ## Bridge bidding suit order, ace == 1
 
 
 function countertovector(c::Accumulator{Int64, Int64})
-    return sort([r for r in keys(c) for ii in 1:c[r]]);
+    return sort([r for r in keys(c) for ii in 1:c[r]])
 end
 
 
 
-(@isdefined cardsuits) || (const cardsuits = collect(1:4));
-(@isdefined cardranks) || (const cardranks = collect(1:13));
-(@isdefined cardvalues) || (const cardvalues = vcat(collect(1:10), [10, 10, 10]));
-(@isdefined suitnames) || (const suitnames = ["spades", "hearts", "diamonds", "clubs"]);
-(@isdefined ranknames) || (const ranknames = ["ace", "two", "three", "four", "five", "six", "seven", "eight", "nine", "ten", "jack", "queen", "king"]);
-(@isdefined shortsuit) || (const shortsuit = ["♠","♡","♢","♣"]);
-(@isdefined shortrank) || (const shortrank = ["A","2","3","4","5","6","7","8","9","T","J","Q","K"]);
+(@isdefined cardsuits) || (const cardsuits = collect(1:4))
+(@isdefined cardranks) || (const cardranks = collect(1:13))
+(@isdefined cardvalues) || (const cardvalues = vcat(collect(1:10), [10, 10, 10]))
+(@isdefined suitnames) || (const suitnames = ["spades", "hearts", "diamonds", "clubs"])
+(@isdefined ranknames) || (const ranknames = ["ace", "two", "three", "four", "five", "six", "seven", "eight", "nine", "ten", "jack", "queen", "king"])
+(@isdefined shortsuit) || (const shortsuit = ["♠","♡","♢","♣"])
+(@isdefined shortrank) || (const shortrank = ["A","2","3","4","5","6","7","8","9","T","J","Q","K"])
 
 (@isdefined PP) || (const PP = [
     [[1]],
@@ -33,18 +34,18 @@ end
     [[3], [2,1], [1,2], [1,1,1]],
     [[4], [3,1], [1,3], [2,2], [2,1,1], [1,2,1], [1,1,2], [1,1,1,1]]
 ]);
-(@isdefined cardcombs) || (const cardcombs = [collect(combinations(cardranks, n)) for n in 1:4]);
+(@isdefined cardcombs) || (const cardcombs = [collect(combinations(cardranks, n)) for n in 1:4])
 
 
-(@isdefined standardDeck) || (const standardDeck = [Card(r,s) for r in cardranks for s in cardsuits]);
-(@isdefined rankDeck) || (const rankDeck = [c.rank for c in standardDeck]);
+(@isdefined standardDeck) || (const standardDeck = [Card(r,s) for r in cardranks for s in cardsuits])
+(@isdefined rankDeck) || (const rankDeck = [c.rank for c in standardDeck])
 
-(@isdefined fullname) || (const fullname(c::Card) = ranknames[c.rank] * " of " * suitnames[c.suit]);
-(@isdefined shortname) || (const shortname(c::Card) = shortrank[c.rank] * shortsuit[c.suit]);
-(@isdefined handname) || (const handname(h::AbstractArray{Card}) = permutedims(shortname.(sort(h, by = c->c.rank))));
+(@isdefined fullname) || (const fullname(c::Card) = ranknames[c.rank] * " of " * suitnames[c.suit])
+(@isdefined shortname) || (const shortname(c::Card) = shortrank[c.rank] * shortsuit[c.suit])
+(@isdefined handname) || (const handname(h::AbstractArray{Card}) = permutedims(shortname.(sort(h, by = c->c.rank))))
 
-(@isdefined handranks) || (handranks(h::Vector{Card}) = sort([c.rank for c in h]));
-(@isdefined handsuits) || (handsuits(h::Vector{Card}) = sort([c.suit for c in h]));
+(@isdefined handranks) || (handranks(h::Vector{Card}) = sort([c.rank for c in h]))
+(@isdefined handsuits) || (handsuits(h::Vector{Card}) = sort([c.suit for c in h]))
 
 
 const hType = Accumulator{Int64, Int64}
@@ -73,8 +74,9 @@ const discardType = Union{
 }
 
 
-include("playUtils.jl");
-include("dbUtils.jl");
+include("playUtils.jl")
+include("dbUtils.jl")
+include("analysisUtils.jl")
 
 
 
@@ -86,8 +88,6 @@ include("dbUtils.jl");
 (@isdefined phID) || (@time const phID = deserialize("phID.jls"))        # Counter => Int64
 (@isdefined phRows) || (@time const phRows = deserialize("phRows.jls"))  # Counter => Vector{Int64}
 (@isdefined M) || (@time global M = loadM())
-(@isdefined results) || (@time global results = deserialize("results.jls"))
-(@isdefined nresults) || (global nresults = length(results))
 
 (@isdefined BVinclude) || (BVinclude = makebvs(issubhand))
 (@isdefined BVexclude) || (BVexclude = makebvs(excludes))
@@ -402,11 +402,11 @@ function threadedCFR(h1Cards::Vector{Card}, h2Cards::Vector{Card}, turncard::Car
 end
 
 
-function oneDeal(dblock::ReentrantLock, dealerlock::ReentrantLock, ponelock::ReentrantLock, resultlock::ReentrantLock)
+function oneDeal(dblock::ReentrantLock, dealerlock::ReentrantLock, ponelock::ReentrantLock)
 
     (h1cards, h2cards, turncard) = dealHands()
     (d1cards, d2cards, p1playscore, p2playscore, p1showscore, p2showscore) = threadedCFR(h1cards, h2cards, turncard, dblock, dealerlock, ponelock)
-    logresult(h1cards, h2cards, turncard, d1cards, d2cards, [p1playscore, p2playscore], [p1showscore, p2showscore], resultlock)
+    # logresult(h1cards, h2cards, turncard, d1cards, d2cards, [p1playscore, p2playscore], [p1showscore, p2showscore], resultlock)
 
 end
 
@@ -417,26 +417,26 @@ function dobatch(ndeals = 10000)
     dblock = ReentrantLock()
     dealerlock = ReentrantLock()
     ponelock = ReentrantLock()
-    resultlock = ReentrantLock()
 
 
     Threads.@threads for ii in 1:ndeals
 
-        oneDeal(dblock, dealerlock, ponelock, resultlock)
+        oneDeal(dblock, dealerlock, ponelock)
 
     end
 
-
-    # saveprogress()
 
 end
 
 for ii in 1:100
     GC.gc()
     print(ii, " ")
-    @time dobatch(1000)
+    @time dobatch(10000)
+    if (ii % 10 == 0) 
+        saveprogress()
+        progressreport()
+    end
 end
-saveprogress()
 
 
 
