@@ -1,0 +1,1 @@
+{"nSnapshot":1,"nDeals":2107375,"dCoverage":0.8655974944651439,"pCoverage":0.8659277166485979,"timestamp":"2022-03-13T11:38:40.810"}
